...
                        onClick={onConfirm}
                        disabled={isLoadingState}
                        loading={isLoadingState}
                    />
                )}
                <ButtonFlat
                    text={onDismissFnRef ? "Cancel" : "Close"}
                    type={ButtonType.Secondary}
                    onClick={() => hideModal()}
                    disabled={isLoadingState}
                />
            </Footer>
        </GenericModal>
...
