...
    "mozac_browser_toolbar_url_view",
    "mozac_browser_toolbar_edit_url_view",
    "url_bar_title",
  )

  private val addressBarIdsByPackage = mapOf(
    "com.android.chrome" to setOf("url_bar"),
    "com.chrome.beta" to setOf("url_bar"),
    "com.chrome.canary" to setOf("url_bar"),
    "com.chrome.dev" to setOf("url_bar"),
    "com.brave.browser" to setOf("url_bar"),
    "com.brave.browser_beta" to setOf("url_bar"),
    "com.brave.browser_nightly" to setOf("url_bar"),
...
