...
                name="vault"
                options={{ title: "Vault", tabBarAccessibilityLabel: "Vault" }}
            />
            <Tabs.Screen
                name="account"
                options={{
                    title: "Account",
                    tabBarAccessibilityLabel: "Account",
                }}
            />
            <Tabs.Screen
                name="devices"
                options={{
...
